@@ -9,8 +9,12 @@ import jakarta.servlet.ServletContextListener;
 import jakarta.servlet.annotation.WebListener;
 import lombok.SneakyThrows;
 
-import java.io.InputStream;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.UUID;
+
+import static com.example.demo.author.AuthorService.AVATAR_RESOURCE_FOLDER;
 
 @WebListener
 public class InitializedData implements ServletContextListener {
@@ -27,28 +31,28 @@ public class InitializedData implements ServletContextListener {
         Author author = Author.builder()
                 .id(UUID.fromString("bc72126e-9a5e-4304-a28a-df340312760f"))
                 .name("Kanye West")
-                .portrait(getResourceAsByteArray("../avatar/bc72126e-9a5e-4304-a28a-df340312760f.png"))
+                .portrait(getResourceAsByteArray("bc72126e-9a5e-4304-a28a-df340312760f.png"))
                 .debutYear(1996)
                 .type(Type.SOLO)
                 .build();
         Author author2 = Author.builder()
                 .name("Linkin Park")
                 .id(UUID.fromString("7e7ae796-759e-4075-bb41-b6b40cedfc18"))
-                .portrait(getResourceAsByteArray("../avatar/7e7ae796-759e-4075-bb41-b6b40cedfc18.png"))
+                .portrait(getResourceAsByteArray("7e7ae796-759e-4075-bb41-b6b40cedfc18.png"))
                 .debutYear(1996)
                 .type(Type.BAND)
                 .build();
         Author author3 = Author.builder()
                 .id(UUID.fromString("a25b09aa-4c2b-4159-ab07-c1ca93108a4a"))
                 .name("AC/DC")
-                .portrait(getResourceAsByteArray("../avatar/a25b09aa-4c2b-4159-ab07-c1ca93108a4a.png"))
+                .portrait(getResourceAsByteArray("a25b09aa-4c2b-4159-ab07-c1ca93108a4a.png"))
                 .debutYear(1973)
                 .type(Type.BAND)
                 .build();
         Author author4 = Author.builder()
                 .name("Kendrick Lamar")
                 .id(UUID.fromString("de8603ba-b47f-4ee2-9b70-12ba721649a9"))
-                .portrait(getResourceAsByteArray("../avatar/de8603ba-b47f-4ee2-9b70-12ba721649a9.png"))
+                .portrait(getResourceAsByteArray("de8603ba-b47f-4ee2-9b70-12ba721649a9.png"))
                 .debutYear(2003)
                 .type(Type.SOLO)
                 .build();
@@ -61,12 +65,10 @@ public class InitializedData implements ServletContextListener {
 
     @SneakyThrows
     private byte[] getResourceAsByteArray(String name) {
-        try (InputStream is = this.getClass().getResourceAsStream(name)) {
-            if (is != null) {
-                return is.readAllBytes();
-            } else {
-                throw new IllegalStateException("Unable to get resource %s".formatted(name));
-            }
+        try {
+            return Files.readAllBytes(Path.of(AVATAR_RESOURCE_FOLDER + name));
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
     }
 }
